# flexvdi-client

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.hpp  CredentialsManager.cpp  CredentialsManager.hpp  DispatcherRegistry.cpp  DispatcherRegistry.hpp  FlexVDIComponent.hpp  FlexVDIGuestAgent.cpp  FlexVDIGuestAgent.hpp  FlexVDIProto.c  FlexVDIProto.h  FlexVMAgent.cpp  FlexVMAgent.hpp  FlexVMProto.c  FlexVMProto.h  INSTALL.md  LICENSE  LocalPipe.cpp  LocalPipe.hpp  LocalPipeClient.cpp  LocalPipeClient.hpp  MessageBuffer.hpp  PrintManager.cpp  PrintManager.hpp  README.md  SharedConstBuffer.hpp  VirtioPort.cpp  VirtioPort.hpp  WinSpoolImpl.cpp  WindowsService.cpp  autorun.inf.in  config.h.in  configure-spice-nsis.sh  find_win_components.sh  flexvdi-guest-agent.rc  flexvdi-guest-agent.service  flexvdi-guest-agent.service.in  flexvdi-guest-agent.sh.in  (+8 more)
client/: CMakeLists.txt  PPDGenerator.c  PPDGenerator.h  flexvdi-cmdline.c  flexvdi-cmdline.h  flexvdi-port.h  flexvdi-port.h.in  flexvdi-spice-client.pc.in  flexvdi-spice.c  flexvdi-spice.h  print-with-poppler.c  printclient-cups.c  printclient-win32.c  printclient.c  printclient.h  serialredir.c
cmake/: CPack.STGZ_Header.sh.in  FindGlib.cmake  NSIS.template.in  Windows.cmake  Windows32.cmake  Windows64.cmake
cred-connectors/: CMakeLists.txt  CredentialsThread.cpp  CredentialsThread.hpp
cred-connectors/credential-provider/: CFlexCredential.cpp  CFlexCredential.h  CFlexProvider.cpp  CFlexProvider.h  CMakeLists.txt  FlexCredential.cpp  FlexCredential.hpp  FlexProvider.cpp  FlexProvider.hpp  FlexProviderFactory.cpp  FlexProviderFactory.hpp  FlexVDICredentialProvider.def  ReaderThread.cpp  ReaderThread.h  ReaderThread.hpp  guid.h.in  helpers.cpp  helpers.h  install_dll.sh  register.bat  register.reg.in  resources.h  setup.nsi  unregister.reg.in
cred-connectors/credential-provider/winsdk/include/: Shlwapi.h  credentialprovider.h
cred-connectors/gina/: CMakeLists.txt  CredentialsConnectorThread.cpp  CredentialsConnectorThread.hpp  GinaDialogHooks.cpp  GinaDialogHooks.hpp  ReadMe.Txt  SSO.cpp  SSO.hpp  flexVDIGina.cpp  flexVDIGina.def  install_dll.sh  setup.nsi  setup.nsi.in
credentials-manager/: CMakeLists.txt  CredentialsManager.cpp  CredentialsManager.hpp  CredentialsThread.cpp  CredentialsThread.hpp
credentials-manager/credential-provider/: CMakeLists.txt  FlexCredential.cpp  FlexProvider.cpp  FlexProvider.hpp  FlexProviderFactory.cpp  FlexProviderFactory.hpp  TileFields.h  helpers.cpp  helpers.h  resources.rc  setup.nsi.in
credentials-manager/gina/: CMakeLists.txt  GinaDialogHooks.cpp  setup.nsi.in
print/: CMakeLists.txt  PrintManager-cups.cpp  PrintManager-win32.cpp  PrintManager.cpp  PrintManager.hpp  flexvdips.ppd  send-job.cpp  send-job.hpp
print/cupsbackend/: CMakeLists.txt  flexvdiprint.cpp  pdftopdf-nocopies
print/windriver/: CMakeLists.txt  FILE_ID.DIZ  README.TXT  changes.txt  filter.cpp  flexvdips.inf  flexvdips.ppd  iapi.h  portmon.c  portmon.h  portrc.h  printer-setup.cpp  redmon.c  redmon.def  redmon.h  redmon.rc  redmon32.def  redmonrc.h  setredmon.cpp  setup.cpp  setup.nsi  setup.nsi.in  unredmon.cpp
print/windriver/gs9.15/: gsdll32.lib  gsdll64.lib
print/windriver/winddk/: winsplp.h
resources/: CMakeLists.txt  flexvdi-client.gresource.xml  keys-menu-linux.ui  keys-menu-windows.ui  spice-win.ui  style.css  window.ui
resources/icons/32x32/: .directory
resources/icons/32x32/actions/: .directory
scripts/: Info-tpl.plist  build_android_imports.sh  build_appimage.sh  build_dmg.sh  build_installer_win.sh  bundle-launcher.sh  flexvdi-client.bundle  setup-tpl.nsi  sign_installer.sh
scripts/nsis/: FontRegAdv.nsh
src/: CMakeLists.txt  PPDGenerator.c  PPDGenerator.h  about.c  about.h  client-app.c  client-app.h  client-conn.c  client-conn.h  client-log.c  client-log.h  client-request.c  client-request.h  client-win.c  client-win.h  configuration.c  configuration.h  conn-forward.c  conn-forward.h  flexvdi-client-app.c  flexvdi-client-win.c  flexvdi-client-win.h  flexvdi-client.gresource.xml  flexvdi-cmdline.c  flexvdi-cmdline.h  flexvdi-port.c  flexvdi-port.h  flexvdi-port.h.in  flexvdi-spice.c  flexvdi-spice.h  legacy-config-parser-linux.c  legacy-config-parser-null.c  legacy-config-parser-win32.c  main.c  print-with-poppler.c  printclient-cups.c  printclient-null.c  printclient-priv.h  printclient-win32.c  printclient.c  (+11 more)
test/: CMakeLists.txt  TimeoutKiller.hpp  get_printer_ppds.c  read_named_pipe.cpp  send_credentials.cpp  test_client_log.c  test_client_request.c  test_terminal_id.c  testginalib.cpp  unit-Connection.cpp  unit-CredentialsManager.cpp  unit-CredentialsThread.cpp  unit-DispatcherRegistry.cpp  unit-LocalPipe.cpp  unit-MessageBuffer.cpp  unit-main.cpp
